--- a/style.css
+++ b/style.css
@@ -70,16 +70,18 @@ html, body{
     line-height: 3.4vw;
 }
 .page0{
-    top: 40vw;
-    line-height: 1.2;
+    top: 10vw;
+    line-height: 2;
 }
 .page0 h1{
+    line-height: 2;
     font-size: 4vw;
 }
 .page0 button{
     color: #fff;
     background-color: #337AB7;
     font-size: 1.4vw;
+    border: none;
     padding: 1.2vw 2.3vw;
 }
 #page1{
@@ -104,7 +106,26 @@ html, body{
     line-height: 2.3vw;
     font-size: 1.2vw;
 }
-
+#page2{
+    width: 100%;
+    height: 50vh;
+    background-color: #F9F9F9;
+    color: #800080;
+    padding: 25px 120px;
+    display: flex;
+}
+#page2 .me{
+    width: 50%;
+    height: 230px;
+    width: 230px;
+    margin: 10px 20px;
+    border-radius: 50%;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.21);
+}
+#page2 h3{
+    margin: 100px;
+    color: #595959;
+}
 .log_in{
     width: 100%;
     height: 50vh;
@@ -113,7 +134,6 @@ html, body{
     display: flex;
 
 }
-
 .log_in .l_part{
     width: 65%;
 }
@@ -233,6 +253,9 @@ footer span{
     #dev{
         margin-top: 10px;
     }
+    .page0{
+        top: 30vw;
+    }
     .page0 h1{
         font-size: 8vw;
     }
@@ -253,7 +276,15 @@ footer span{
         font-size: 4vw;
     }
 
-
+    #page2{
+        width: 100%;
+        height: 60.5vh;
+        padding: 30px 30px;
+        flex-direction: column;
+    }
+    #page2 h3{
+        margin: 20px 0px;
+    }
     .log_in{
         height: 80vh;
         padding: 0 4vw;
