--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ html, body{
 }
 #page2{
     width: 100%;
-    height: 50vh;
+    /* height: 50vh; */
     background-color: #F9F9F9;
     color: #800080;
     padding: 25px 120px;
@@ -279,7 +279,6 @@ footer span{
 
     #page2{
         width: 100%;
-        height: 65.5vh;
         padding: 30px 30px;
         flex-direction: column;
     }
